--- a/index.html
+++ b/index.html
@@ -322,7 +322,27 @@
     transform: scale(1.2); /* ホバー時に拡大 */
     color: #fff; /* 色を濃く */
 }
+.symptoms button,
+    .options button {
+        font-weight: bold; /* 太文字に設定 */
+        text-align: left; /* 左端揃えに設定 */
+        display: block;
+        width: 100%;
+        padding: 10px;
+        margin-bottom: 10px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        background-color: #f7f7f7;
+        cursor: pointer;
+        box-sizing: border-box;
+        white-space: nowrap;
+    }
 
+    .symptoms button.active,
+    .options button.active {
+        background-color: #444;
+        color: #fff;
+    }
     </style>
 </head>
 
@@ -338,41 +358,67 @@
             <button type="button" onclick="selectSymptom(this, null, 'weddingPlan')">ウェディングプラン</button>
             <button type="button" onclick="selectSymptom(this, null, 'kidsPlan')">キッズバースデープラン</button>
         </div>
-        <div class="highlight-background">
+        <div class="highlight-background" style="font-weight: bold; text-align: left;">
             <span class="highlight-text" id="toggle-options" onclick="toggleOptions()">オプション <span id="toggle-symbol">＋</span></span>
         </div>
         <div id="irradiations">
             <div id="basicPlan" class="options" style="display: none;">
-                <button type="button" onclick="selectirradiations(this)" data-price="6600">新婦ヘアセット 6600円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">新郎ヘアセット 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">フルメイク 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="11000">衣装追加レンタル（ウェディングドレス） 11000円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（メンズ衣装） 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（マタニティドレス） 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">花の装飾追加レンタル 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="1100">人数追加（5名以上一人につき） 1100円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（10分） 1100円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="6600">新婦ヘアセット 6,600円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">新郎ヘアセット 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">フルメイク 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="11000">衣装追加レンタル（ウェディングドレス） 11,000円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（メンズ衣装） 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（マタニティドレス） 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">花の装飾追加レンタル 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">人数追加（5名以上一人につき） 1,100円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（10分） 1,100円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（20分） 2,200円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（30分） 3,300円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（40分） 4,400円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（50分） 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（60分） 6,600円</button>
             </div>
             <div id="maternityPlan" class="options" style="display: none;">
-                <button type="button" onclick="selectirradiations(this)" data-price="6600">新婦ヘアセット 6600円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">新郎ヘアセット 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">フルメイク 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（メンズ衣装） 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（マタニティドレス） 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">花の装飾追加レンタル 5500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="6600">新婦ヘアセット 6,600円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">新郎ヘアセット 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">フルメイク 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（メンズ衣装） 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（マタニティドレス） 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">花の装飾追加レンタル 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">人数追加（5名以上一人につき） 1,100円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（10分） 1,100円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（20分） 2,200円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（30分） 3,300円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（40分） 4,400円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（50分） 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（60分） 6,600円</button>
             </div>
             <div id="weddingPlan" class="options" style="display: none;">
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">新郎ヘアセット 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">フルメイク 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="11000">衣装追加レンタル（ウェディングドレス） 11000円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（メンズ衣装） 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">花の装飾追加レンタル 5500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">新郎ヘアセット 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">フルメイク 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="11000">衣装追加レンタル（ウェディングドレス） 11,000円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（メンズ衣装） 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">花の装飾追加レンタル 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">人数追加（5名以上一人につき） 1,100円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（10分） 1,100円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（20分） 2,200円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（30分） 3,300円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（40分） 4,400円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（50分） 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（60分） 6,600円</button>
             </div>
             <div id="kidsPlan" class="options" style="display: none;">
-                <button type="button" onclick="selectirradiations(this)" data-price="11000">衣装追加レンタル（ウェディングドレス） 11000円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（メンズ衣装） 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（マタニティドレス） 5500円</button>
-                <button type="button" onclick="selectirradiations(this)" data-price="5500">花の装飾追加レンタル 5500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="11000">衣装追加レンタル（ウェディングドレス） 11,000円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（メンズ衣装） 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">衣装追加レンタル（マタニティドレス） 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="5500">花の装飾追加レンタル 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">人数追加（5名以上一人につき） 1,100円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（10分） 1,100円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（20分） 2,200円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（30分） 3,300円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（40分） 4,400円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（50分） 5,500円</button>
+                <button type="button" onclick="selectirradiations(this)" data-price="1100">時間追加（60分） 6,600円</button>
             </div>
         </div>
 
@@ -458,20 +504,20 @@
 
         // 訪問回数ごとの時間設定 (例：初めて=20分、2回目以降=15分)
         let irradiationsTimes = {
-            '新婦ヘアセット 6600円': 40,
-            '新郎ヘアセット 5500円': 20,
-            'フルメイク 5500円': 40,
-            '衣装追加レンタル（ウェディングドレス） 11000円': 15,
-            '衣装追加レンタル（メンズ衣装） 5500円': 15,
-            '衣装追加レンタル（マタニティドレス） 5500円': 15,
-            '花の装飾追加レンタル 5500円': 0,
-            '人数追加（5名以上希望の方一人につき） 1100円': 0,
-            '時間追加（10分） 1100円': 10,
-            '時間追加（20分） 2200円': 20,
-            '時間追加（30分） 3300円': 30,
-            '時間追加（40分） 4400円': 40,
-            '時間追加（50分） 5500円': 50,
-            '時間追加（60分） 6600円': 60
+            '新婦ヘアセット 6,600円': 40,
+            '新郎ヘアセット 5,500円': 20,
+            'フルメイク 5,500円': 40,
+            '衣装追加レンタル（ウェディングドレス） 11,000円': 15,
+            '衣装追加レンタル（メンズ衣装） 5,500円': 15,
+            '衣装追加レンタル（マタニティドレス） 5,500円': 15,
+            '花の装飾追加レンタル 5,500円': 0,
+            '人数追加（5名以上希望の方一人につき） 1,100円': 0,
+            '時間追加（10分） 1,100円': 10,
+            '時間追加（20分） 2,200円': 20,
+            '時間追加（30分） 3,300円': 30,
+            '時間追加（40分） 4,400円': 40,
+            '時間追加（50分） 5,500円': 50,
+            '時間追加（60分） 6,600円': 60
         };
 
         let selectedirradiationsTime = 0; // 訪問回数で選択された時間
@@ -484,19 +530,6 @@
         };
 
         let selectedMenuTime = 0;
-
-        function toggleOptions() {
-    const optionsDiv = document.getElementById('irradiations'); // オプション全体のDIV
-    const toggleSymbol = document.getElementById('toggle-symbol'); // ＋/－の部分
-
-    if (optionsDiv.style.display === 'none' || optionsDiv.style.display === '') {
-        optionsDiv.style.display = 'block'; // オプションを表示
-        toggleSymbol.textContent = '－';    // マイナス記号に変更
-    } else {
-        optionsDiv.style.display = 'none'; // オプションを非表示
-        toggleSymbol.textContent = '＋';    // プラス記号に変更
-    }
-}
 
         function updateDisplayInfo() {
             const name = document.getElementById('name').value;
@@ -581,23 +614,35 @@ document.addEventListener('DOMContentLoaded', () => {
             });
         });
 
-        function showOptions(planId) {
-        // すべてのオプションを非表示
-        const allOptions = document.querySelectorAll('.options');
-        allOptions.forEach(option => option.style.display = 'none');
+// オプションの表示・非表示を切り替える関数
+    function toggleOptions() {
+        const optionsDiv = document.getElementById('irradiations');
+        const toggleSymbol = document.getElementById('toggle-symbol');
 
-        // 指定されたプランのオプションを表示
-        const selectedOptions = document.getElementById(planId);
-        if (selectedOptions) {
-            selectedOptions.style.display = 'block';
+        if (optionsDiv.style.display === 'none' || optionsDiv.style.display === '') {
+            optionsDiv.style.display = 'block'; // オプションを表示
+            toggleSymbol.textContent = '－';    // マイナス記号に変更
+        } else {
+            optionsDiv.style.display = 'none'; // オプションを非表示
+            toggleSymbol.textContent = '＋';    // プラス記号に変更
         }
     }
 
-    function selectOption(button) {
-        // 選択されたオプションの処理（例: 価格の取得など）
-        const price = button.getAttribute('data-price');
-        console.log(`選択されたオプション: ${button.textContent}, 価格: ${price}円`);
+        function showOptions(planId) {
+    // すべてのオプションを非表示
+    const allOptions = document.querySelectorAll('.options');
+    allOptions.forEach(option => option.style.display = 'none');
+
+    // 指定されたプランのオプションを表示
+    const selectedOptions = document.getElementById(planId);
+    if (selectedOptions) {
+        selectedOptions.style.display = 'block';
     }
+
+    // オプションを表示する「＋」ボタンをリセット
+    const toggleSymbol = document.getElementById('toggle-symbol');
+    toggleSymbol.textContent = '－'; // 最初にオプションを表示
+}
 
     function selectSymptom(button, treatmentId, planId) {
     // 選択された日時をリセット
@@ -630,6 +675,19 @@ document.addEventListener('DOMContentLoaded', () => {
 
     // カレンダーを更新
     fetchAvailability(currentDate);
+
+    // プランに基づくオプションの内容設定
+    const allOptions = document.querySelectorAll('.options');
+    allOptions.forEach(option => option.style.display = 'none'); // 他のオプション非表示
+
+    const selectedOptions = document.getElementById(planId);
+    if (selectedOptions) {
+        selectedOptions.style.display = 'block'; // 該当オプションのみ表示
+    }
+
+    // ただしオプション全体は非表示のまま
+    document.getElementById('irradiations').style.display = 'none';
+    document.getElementById('toggle-symbol').textContent = '＋'; // プラス記号を維持
 
     // トリートメントテキストを表示
     const treatmentText = document.getElementById('treatment-text');
