--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             /* カレンダーを中央に配置 */
             margin-bottom: 20px;
             position: relative;
-            width: 106%;
+            width: 100%;
             /* 横幅を広げる */
             margin-left: -3%;
             /* 親要素の中心にカレンダーを配置 */
@@ -343,6 +343,13 @@
         background-color: #444;
         color: #fff;
     }
+    .info-text {
+    margin-top: 20px; /* 下にずらすスペース */
+    font-size: 13px;  /* 読みやすいサイズ */
+    color: #000000;      /* 説明文らしい落ち着いた色 */
+    line-height: 0.1;
+    text-align: center; /* 中央揃え */
+}
     </style>
 </head>
 
@@ -350,7 +357,8 @@
     <div class="container">
         <h1>Style Lily<br>空き枠確認 / 予約フォーム</h1>
 
-        <div class="label">撮影プランをお選びください<br>※プランを選択すると<br>空き状況のカレンダーが表示されます</div>
+        <div class="label">撮影プランをお選びください</div>
+        <div class="info-text">※プランを選択すると空き状況のカレンダーが表示されます</div>
         <div id="treatment-text" style="margin-bottom: 20px;"></div>
         <div class="symptoms">
             <button type="button" onclick="selectSymptom(this, null, 'basicPlan')">ベーシックプラン</button>
