--- a/index.html
+++ b/index.html
@@ -346,9 +346,19 @@
     .info-text {
     margin-top: 20px; /* 下にずらすスペース */
     font-size: 13px;  /* 読みやすいサイズ */
-    color: #000000;      /* 説明文らしい落ち着いた色 */
-    line-height: 0.1;
+    color: #000000;   /* 説明文らしい落ち着いた色 */
+    line-height: 1.5; /* テキスト間の高さを適切に設定 */
     text-align: center; /* 中央揃え */
+    word-wrap: break-word; /* 長いテキストの折り返しを強制 */
+}
+
+/* 携帯端末向けのレスポンシブデザイン */
+@media (max-width: 768px) {
+    .info-text {
+        font-size: 12px; /* スマホでは少し小さく */
+        margin-top: 15px; /* 上下のマージンを調整 */
+        line-height: 1.4; /* テキストの高さ調整 */
+    }
 }
     </style>
 </head>
