--- a/index.html
+++ b/index.html
@@ -763,7 +763,7 @@ function selectirradiations(button) {
     // 選択されたオプションを取得
     const selectedButtons = document.querySelectorAll('.options button.active');
     const selectedIrradiations = Array.from(selectedButtons).map(btn => btn.innerText);
-    irradiationsCount = selectedIrradiations.join(', ');
+    irradiationsCount = selectedIrradiations.join('. ');
 
     // すべてのオプションの価格を再計算
     optionsPrice = 0; // 全体をリセットして再計算
