--- a/index.html
+++ b/index.html
@@ -211,11 +211,12 @@
     border-top-color: #00d1ff; /* 明るい青で目立たせる */
     border-radius: 50%; /* 丸い形状 */
     animation: spin 0.7s linear infinite; /* 滑らかで速い回転 */
+    margin-left: 12px; /* スピナーを右にずらす */
 }
 
 .loading-text {
     margin-top: 20px; /* スピナーとテキストの間隔 */
-    font-size: 20px; /* さらに大きなフォントサイズ */
+    font-size: 15px; /* さらに大きなフォントサイズ */
     font-weight: bold; /* 太字で目立たせる */
     color: #ffffff; /* 純白で高いコントラスト */
     letter-spacing: 1px; /* 文字間隔を広げてモダンな印象に */
