--- a/index.html
+++ b/index.html
@@ -156,40 +156,41 @@
         }
 
         .calendar th {
-            background-color: #f7f7f7;
-        }
+    background-color: #f7f7f7; /* カレンダーのヘッダー部分の背景色を薄いグレーに設定 */
+}
 
-        .calendar td:hover {
-            background-color: #ddd;
-        }
+.calendar td:hover {
+    background-color: #ddd; /* カレンダーのセルにマウスを乗せたときの背景色を少し濃いグレーに設定 */
+}
 
-        .calendar td.selected {
-            background-color: #13ca5e;
-            color: #fff;
-        }
+.calendar td.selected {
+    background-color: #13ca5e; /* 選択されたカレンダーのセルの背景色を緑色に設定 */
+    color: #fff; /* 選択されたセルのテキスト色を白に設定 */
+}
 
-        .week-button-container {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 100%;
-            margin-bottom: 10px;
-        }
+.week-button-container {
+    display: flex; /* 子要素を横方向に並べるためにflexboxを使用 */
+    justify-content: space-between; /* 子要素を左右に均等に配置 */
+    align-items: center; /* 子要素を縦方向の中央に揃える */
+    width: 100%; /* コンテナの幅を100%に設定 */
+    margin-bottom: 10px; /* 下に10pxのマージンを追加 */
+}
 
-        .week-button {
-            padding: 10px 20px;
-            background-color: #444;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
+.week-button {
+    padding: 10px 20px; /* 上下10px、左右20pxの内側の余白を追加 */
+    background-color: #444; /* ボタンの背景色を濃いグレーに設定 */
+    color: #fff; /* ボタンのテキスト色を白に設定 */
+    border: none; /* ボタンの境界線を削除 */
+    border-radius: 4px; /* ボタンの角を4pxの半径で丸める */
+    cursor: pointer; /* マウスカーソルをポインター（指の形）に変更 */
+    margin-left: 31px; /* 左側に20pxの余白を追加して右にずらす */
+}
 
-        .current-month {
-            font-size: 16px;
-            font-weight: bold;
-            color: #444;
-        }
+.current-month {
+    font-size: 16px; /* フォントサイズを16pxに設定 */
+    font-weight: bold; /* テキストを太字に設定 */
+    color: #444; /* テキストの色を濃いグレーに設定 */
+}
 
         .loading-spinner {
     position: fixed; /* 画面全体に対応 */
