--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
     font-size: 16px; /* フォントサイズを16pxに設定 */
     font-weight: bold; /* テキストを太字に設定 */
     color: #444; /* テキストの色を濃いグレーに設定 */
+    margin-left: 30px; /* 10pxだけ右にずらす */
 }
 
         .loading-spinner {
@@ -352,7 +353,7 @@
         <div class="label">希望日時</div>
         <div class="calendar-container">
             <div class="week-button-container">
-                <button class="week-button" onclick="previousWeek()">← 前の週</button>
+                <button class="week-button" onclick="previousWeek()">←前の週</button>
                 <span class="current-month" id="currentMonth">月</span>
                 <button class="week-button" onclick="nextWeek()">次の週→</button>
             </div>
