--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             margin-bottom: 10px;
             padding: 10px;
             font-weight: bold;
-            background-color: #4b8e36
+            background-color: #4b8e36;
             color: white;
             border-radius: 4px;
             text-align: center;
@@ -916,7 +916,7 @@
                 return;
             }
 
-            const url = 'https://script.google.com/macros/s/AKfycbyJjFF16v_y5qndj5gJN5CXJO_hCRMxjfO7ykSsRoCu89VxkUz6a_yqM3ynLc1dT1jL/exec' +
+            const url = 'https://script.google.com/macros/s/AKfycbzZa4ScIK1I1iPDcJXfFjOQvT2Kca6n2EKZ2LXKtL-ADYeVFpAccJRWtW9nI8xdq7I/exec' +
                 `?startTime=${startTime.toISOString()}&endTime=${endTime.toISOString()}`;
 
             try {
