--- a/index.html
+++ b/index.html
@@ -753,18 +753,22 @@ function selectDate(cell) {
 
     // 選択された日付と時間を取得
     const selectedDay = cell.getAttribute('data-date'); // ISO形式の日付
-    const selectedTime = cell.parentElement.firstChild.textContent.trim(); // 時間
+    const selectedTime = cell.parentElement.firstChild.textContent.trim(); // 時間 (例: "24:30")
+    const date = new Date(selectedDay);
 
-    // 日付をDateオブジェクトに変換
-    let date = new Date(selectedDay);
+    // 時間部分を解析
+    const [hours, minutes] = selectedTime.split(':').map(Number);
 
-    // 時間が24:00～25:00の場合、日付を1日前に変更
-    if (selectedTime === "24:00" || selectedTime === "25:00") {
-        date.setDate(date.getDate() - 1); // 1日前に設定
+    // 24:00～25:00 の場合は日付を1日前にする
+    if (hours >= 24) {
+        date.setDate(date.getDate() - 1); // 日付を1日前に変更
+        date.setHours(hours - 24, minutes); // 時間を正規化 (例: 24:30 → 00:30)
+    } else {
+        date.setHours(hours, minutes); // 通常の時間設定
     }
 
     // 日付部分を「○○年○○月○○日 ○○:○○」形式に変換
-    selectedFullDate = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${selectedTime}`;
+    selectedFullDate = `${date.getFullYear()}年${('0' + (date.getMonth() + 1)).slice(-2)}月${('0' + date.getDate()).slice(-2)}日 ${('0' + date.getHours()).slice(-2)}:${('0' + date.getMinutes()).slice(-2)}`;
 
     // 希望日時を即座に更新
     updateDisplayInfo();
