--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@ function normalizeTime(date) {
 
     if (hours >= 24 && hours <= 25) {
         // 24:00～25:00を前日として扱う
-        normalizedDate.setDate(normalizedDate.getDate() - 1); // 日付を一日前に
+        normalizedDate.setDate(normalizedDate.getDate() - 3); // 日付を1日前に
         normalizedDate.setHours(hours - 24); // 時間を0:00～1:00に変換
     } else if (hours >= 0 && hours <= 5) {
         // 深夜（0時～5時）は27時扱い
